<resources>
    <string name="app_name">Client for Strava</string>
    <string name="main_description">Train hard with Strava!</string>
    <string name="button">Push me!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="passwordTextView_error">The password must be at least 8 characters long</string>
    <string name="welcome">Welcome to main page!</string>
    <string name="skip_button">Skip</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="auth_canceled">Authentication failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="athlete_username">Username:</string>
    <string name="athlete_firstname">Firstname:</string>
    <string name="athlete_lastname">Lastname:</string>
    <string name="athlete_city">City:</string>
    <string name="athlete_country">Country:</string>
    <string name="athlete_weight">Weight:</string>
    <string name="weight">%1$s kg</string>
    <string name="distance">Distance (m)</string>
    <string name="pace">Speed (m/s)</string>
    <string name="time">Time (min)</string>
    <string name="fail_load_data">Failed to load data</string>
    <string name="Logout">Logout</string>
    <string name="data_from_db">Data from the local storage is displayed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="weight_error">Enter correct value</string>
    <string name="dialog_title">Edit profile</string>
    <string name="data_from_api">Data from the server is displayed</string>
    <string name="web_view">Profile</string>
    //
    <string name="user_add_title">Add new workout</string>
    <string name="user_add_hint_first_name">First name</string>
    <string name="user_add_hint_last_name">Last name</string>
    <string name="user_add_hint_email">Email</string>
    <string name="user_add_hint_avatar">Avatar</string>
    <string name="user_add_button_save">Save</string>
    <string name="user_add_error_incorrect_format">Incorrect form</string>
    <string name="user_add_error_default">User save error</string>
    <string name="welcome_screen">Welcome to client for Strava!</string>
    <string name="second_screen">After authorization, most of the app\'s functions will be available to you</string>
    <string name="third_screen">You will be able to view and edit your profile, as well as monitor your workouts and add them</string>
    //

    <string-array name="workout_type">
        <item>Ride</item>
        <item>Run</item>
        <item>Walk</item>
        <item>Swim</item>
    </string-array>
</resources>