<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_orange_dark">
        <TextView
            android:gravity="center"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/time_train"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:text="@string/distance"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/pace"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/time"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/distance"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/temp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/time"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_thumb_up_24"
                android:background="@null"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_comment_24"
                android:background="@null"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_share_24"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>